<resources>
    <string name="app_name">Attend</string>

    <!--  internet  -->
    <string name="please_check_your_connection_and_try_again">Connection Error, Please check your internet connection and try again.</string>
    <string name="connection_error_please_try_again">Connection error! Please try again</string>
    <string name="connection_error">Connection error!</string>
    <string name="connect">Connect</string>
    <string name="try_again">Try again</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="verify_phone">Verify Phone</string>

    <string name="you_are_not_logged_in">You are not logged in</string>
    <string name="you_must_log_in_to_your_account_first">You must log in to your account first</string>
    <string name="our_services_may_not_currently_be_available_in_your_area_please_specify_your_location_elsewhere_or_change_the_search_filter">Our services may not currently be available in your area. Please specify your location elsewhere or change the search filter</string>

    <!--  Actions  -->
    <string name="welcome">"Welcome !"</string>
    <string name="send">Send</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="loading">Loading…</string>
    <string name="or">OR</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="end">End</string>
    <string name="more">More</string>
    <string name="select">Select</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="change">Change</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="guest">Guest</string>
    <string name="employee">Employee</string>
    <string name="admin">Admin</string>
    <string name="login_as">Login as:</string>
    <string name="reception">Reception</string>
    <string name="facility_provider">Facility Provider</string>
    <string name="employee_number">Employee Number</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="full_name">Full Name</string>
    <string name="update_password">Update Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="yes">Yes</string>
    <string name="univ_id">University ID</string>
    <string name="settings">Settings</string>
    <string name="users">Users</string>
    <string name="admins">Admins</string>
    <string name="teachers">Teachers</string>
    <string name="students">Students</string>
    <string name="sections">Sections</string>
    <string name="subjects">Subjects</string>
    <string name="lectures">Lectures</string>
    <string name="section_code">Section Code</string>
    <string name="section_name">Section Name</string>
    <string name="subject_name">Subject Name</string>
    <string name="subject_code">Subject Code</string>
    <string name="about">About us</string>
    <string name="lecture_title">Lecture Title</string>
    <string name="lecture_date">Lecture Date</string>
    <string name="lecture_time">Lecture Time</string>
    <string name="location">Location</string>
    <string name="location_icon">Location Icon</string>
    <string name="subject_students">Students</string>
    <string name="all_lectures">All Lectures</string>
    <string name="qr_view">View QR</string>
    <string name="details">Details</string>
    <string name="attendance">Attendance</string>
    <string name="attended_Lectures">Attended</string>
    <string name="today_lectures">Today\'s Lectures</string>

</resources>