<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.home.ui.users.student.StudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:paddingBottom="200dp">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputTextTheme"
            app:counterEnabled="true"
            app:counterMaxLength="9" >

            <EditText
                android:id="@+id/txt_univ_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:hint="@string/univ_id"
                android:inputType="number"
                android:maxLength="9"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/InputTextTheme">

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/InputTextTheme">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:textAlignment="center"
                android:textColorHighlight="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_password"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/update_password"
            android:visibility="gone"
            tools:visibility="visible" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            style="@style/InputTextTheme"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="Autofill"
                tools:text="123456" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_confirm_password"
            style="@style/InputTextTheme"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="Autofill"
                tools:text="123456" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:fontFamily="monospace"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:gravity="center">

            <TextView
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-7dp"
                android:background="?attr/selectableItemBackground"
                android:elevation="3dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/delete"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>