<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.home.ui.sections.lecture.LectureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:paddingBottom="200dp">

        <com.google.android.material.textfield.TextInputLayout style="@style/InputTextTheme">

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:hint="@string/lecture_title"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_lyt"
            style="@style/InputTextTheme"
            app:endIconDrawable="@drawable/date_icon"
            app:endIconMode="custom">

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:fontFamily="monospace"
                android:hint="@string/lecture_date"
                android:inputType="date"
                android:maxLength="20"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_lyt"
            style="@style/InputTextTheme"
            app:endIconDrawable="@drawable/time_icon"
            app:endIconMode="custom">

            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTint="@color/purple_700"
                android:enabled="false"
                android:fontFamily="monospace"
                android:hint="@string/lecture_time"
                android:inputType="time"
                android:maxLength="20"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:fontFamily="monospace"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:gravity="center">

            <TextView
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-7dp"
                android:background="?attr/selectableItemBackground"
                android:elevation="3dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/delete"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>